Certification3: Drum Machine - Fixed display text oversized on stretch screens

--- a/frontEnd-development-libraries/drum-machine/src/index.css
+++ b/frontEnd-development-libraries/drum-machine/src/index.css
@@ -28,6 +28,7 @@ body {
 	width: 60%;
 	max-width: 600px;
 	max-height: 400px;
+	min-width: 200px;
 	background-color: cornflowerblue;
 	display: grid;
 	grid-template-columns: 1fr;
@@ -101,6 +102,6 @@ body {
 	align-items: center;
 	justify-content: center;
 	border-radius: 10px;
-	font-size: 1.5em;
+	font-size: 70%;
 	text-shadow: 0 0 3px orangered;
 }
